# python-smhtml

./: .coveragerc  .travis.yml  LICENSE  MANIFEST.in  README.rst  setup.cfg  setup.py  tox.ini
pkg/: nose.cfg  package.spec.in  test_requirements.txt
smhtml/: __init__.py  api.py  cli.py  dumper.py  globals.py  loader.py  parser.py  utils.py
tests/: cli.py  common.py  dumper.py  loader.py  parser.py
tests/res/: python-smhtml.mhtml
